--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Donteco Music Player</string>
+    <string name="choose_crossfade_duration">Drag Crossfade Duration</string>
 </resources>
